# brain2

./: .gitignore  LICENSE  README.md  RELEASES.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
agent-prompts/: BRAIN2.md
scripts/: build-local-stt.bat  build-portable.bat  build.ps1  run-local-stt.bat
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: loopback_probe.rs
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  anthropic.rs  audio.rs  brain.rs  commands.rs  deepgram.rs  factory.rs  feeder.rs  forge.rs  gbrain.rs  knowledge.rs  lib.rs  llm.rs  local_stt.rs  main.rs  models.rs  openai.rs  proc.rs  settings.rs  state.rs  storage.rs  supervisor.rs
src/components/: BrainPane.tsx  ChatPane.tsx  ForgePane.tsx  HistoryDrawer.tsx  NotesPane.tsx  SettingsModal.tsx  Splitter.tsx  SummaryPane.tsx  TopBar.tsx  TranscriptPane.tsx
src/lib/: tauri.ts  types.ts
src/overlay/: Overlay.tsx  main.tsx  overlay.css
